Pre_call Update

--- a/Notebooks/05_modeling.ipynb
+++ b/Notebooks/05_modeling.ipynb
@@ -1253,28 +1253,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Code task 4#\n",
     "#Call `predict_increase` with a list of the features 'Runs', 'vertical_drop', and 'total_chairs'\n",
     "#and associated deltas of 1, 150, and 1\n",
-    "ticket2_increase = predict_increase(['Runs', 'vertical_drop', 'total_chairs'], [1,150,1])\n",
+    "ticket2_increase = predict_increase(['Runs', 'vertical_drop', 'total_chairs', 'Snow Making_ac'], [1,150,1,0])\n",
     "revenue2_increase = 5 * expected_visitors * ticket2_increase"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This scenario increases support for ticket price by $8.46\n",
-      "Over the season, this could be expected to amount to $14811594\n"
+      "This scenario increases support for ticket price by $9.75\n",
+      "Over the season, this could be expected to amount to $17068841\n"
      ]
     }
    ],
@@ -1396,7 +1396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: 1** The Big Mountain Resort is currently charging $81.00 per ticket. The model suggests the resort could charge $94.22 per ticket, this is well within the acceptable range of $10.22 supported by the MAE. Big Mountain is in the uppermost range of almost every important feature in determining ticket price compared to the rest of the market. The addition of a new chair would support a $0.29 increase in ticket price, which would yield approximately $507,246 in sales revenue. To the business leadership I would recommend option #2 as the increase in number of runs, chair lifts, and vertical drop would support a price increase of $9.75 and potential revenue of $17,068,841. This would be more than enough to cover the cost of the additional lift and the previously purchased lift. As far as cutting costs by closing runs is concerned, shutting down 1 or 2 runs would not have a significant adverse effect on acceptable ticket price. However, 3 or more closures would drastically reduce the acceptable ticket price. This suggests that it would be fine to shutdown runs individually for maintanence or addition of features as needed, without harming the resort's ticket price."
    ]
   },
   {
