--- a/Notebooks/05_modeling.ipynb
+++ b/Notebooks/05_modeling.ipynb
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1146,7 @@
        "[-1, -2, -3, -4, -5, -6, -7, -8, -9, -10]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
        " -1.7101449275362341]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1253,28 +1253,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Code task 4#\n",
     "#Call `predict_increase` with a list of the features 'Runs', 'vertical_drop', and 'total_chairs'\n",
     "#and associated deltas of 1, 150, and 1\n",
-    "ticket2_increase = predict_increase(['Runs', 'vertical_drop', 'total_chairs', 'Snow Making_ac'], [1,150,1,0])\n",
+    "ticket2_increase = predict_increase(['Runs', 'vertical_drop', 'total_chairs'], [1,150,0])\n",
     "revenue2_increase = 5 * expected_visitors * ticket2_increase"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This scenario increases support for ticket price by $9.75\n",
-      "Over the season, this could be expected to amount to $17068841\n"
+      "This scenario increases support for ticket price by $6.09\n",
+      "Over the season, this could be expected to amount to $10652174\n"
      ]
     }
    ],
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** The Big Mountain Resort is currently charging 81.00 per ticket. The model suggests the resort could charge 94.22 per ticket, this is well within the acceptable range of 10.22 supported by the MAE. Big Mountain is in the uppermost range of almost every important feature in determining ticket price compared to the rest of the market. The addition of a new chair would support a 0.29 increase in ticket price, which would yield approximately $ 507,246 in sales revenue. To the business leadership I would recommend option number 2 as the increase in number of runs, chair lifts, and vertical drop would support a price increase of 9.75 and potential revenue of 17,068,841. This would be more than enough to cover the cost of the additional lift and the previously purchased lift. As far as cutting costs by closing runs is concerned, shutting down 1 or 2 runs would not have a significant adverse effect on acceptable ticket price. However, 3 or more closures would drastically reduce the acceptable ticket price. This suggests that it would be fine to shutdown runs individually for maintanence or addition of features as needed, without harming the resort's ticket price.\n",
+    "**A: 1** The Big Mountain Resort is currently charging 81.00 per ticket. The model suggests the resort could charge 94.22 per ticket, this is well within the acceptable range of 10.22 supported by the MAE. Big Mountain is in the uppermost range of almost every important feature in determining ticket price compared to the rest of the market. The addition of a new chair would support a 2.35 increase in ticket price and yield 4,159,420 in sales revenue. To the business leadership I would recommend option number 2 as the increase in number of runs, chair lifts, and vertical drop would support a price increase of 8.46 and potential revenue of 14,811,594. This would be more than enough to cover the cost of the additional lift and the previously purchased lift (3,080,000 for both lifts). As far as cutting costs by closing runs is concerned, shutting down 1 or 2 runs would not have a significant adverse effect on acceptable ticket price. However, 3 or more closures would drastically reduce the acceptable ticket price. This suggests that it would be fine to shutdown runs individually for maintanence or addition of features as needed, without harming the resort's ticket price.\n",
     "\n"
    ]
   },
@@ -1418,7 +1418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 2** To further improve the predictive power of the model, it would be helpful to know what costs are associated with snow makers, trams, fast quads, and lighting for night skiing. This suggests that Big Mountain and similar competitors may be under charging for their current facilities relative to the rest of the market. I am not sure that executives would be surprised, they had already suspected that Big Mountain may not be charging the appropriate amount for ticket prices. That is why asked for a data driven model be developed to aid in the price determination process. They could make adjustments to the features and their deltas to test the effect of resort changes on the appropriate ticket price they could charge. I would not expect them to have to come to me to implement minor changes to features and deltas, this could easily be done by an analyst. A notebook format may be suitable for future data scientists/programers to explore, but usin"
+    "**A: 2** To further improve the predictive power of the model, it would be helpful to know what costs are associated with snow makers, trams, fast quads, and lighting for night skiing. This suggests that Big Mountain and similar competitors may be under charging for their current facilities relative to the rest of the market. I am not sure that executives would be surprised, they had already suspected that Big Mountain may not be charging the appropriate amount for ticket prices. That is why asked for a data driven model be developed to aid in the price determination process. They could make adjustments to the features and their deltas to test the effect of resort changes on the appropriate ticket price they could charge. I would not expect them to have to come to me to implement minor changes to features and deltas, this could easily be done by an analyst. A notebook format may be suitable for future data scientists/programers to explore, but using the model in some form of dashboard like, Qlikview/tableau, may be more beneficial for users with less coding expertise."
    ]
   }
  ],
